--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   },
   "dependencies": {},
   "scripts": {
-    "test": "mocha"
+    "test": "jest test/test.js"
   },
   "devDependencies": {
-    "minimist": "^1.2.0",
-    "mocha": "^5.2.0"
+    "jest": "^25.5.0"
   },
   "repository": {
     "type": "git",
